# blues-vita

./: CMakeLists.txt  README.md  main.c  sys_sdl2.c
bb_data/: AVTEGOU.SQV  AVTENT.SQV  AVTPRIS.SQV  AVTVILLE.SQV  CONCERT.CK1  CONCERT.CK2  CONCERT.SQL  EGOU.CK1  EGOU.CK2  EGOU.SQL  ENEMI2.SQV  ENEMI3.SQV  ENEMI4.SQV  ENEMI5.SQV  ENEMI6.SQV  ENT.CK1  ENT.CK2  ENT.SQL  INSERT.SQZ  JOHN.SQZ  MAG.SQL  OH.SQZ  PRISON.CK1  PRISON.CK2  PRISON.SQL  TERRY.SQZ  VILLE.CK1  VILLE.CK2  VILLE.SQL
ja/: level.c
p2/: level.c
